# handful

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
handful/cli/: main.py
handful/core/: processor.py  tracker.py  types.py
handful/server/: app.py
handful/server/templates/: index.html
handful/sources/: base.py  mjpeg.py
